# ha-tfi-live

./: .gitignore  CONTRIBUTING.md  README.md  hacs.json  nta_query.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/badges/: coverage.json
.github/workflows/: ci.yml  labeler.yml  release.yml  validate.yml
custom_components/ha_tfi_live/: __init__.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  sensor.py  strings.json
custom_components/tfi_live/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  static_gtfs.py  strings.json  types.py
custom_components/tfi_live/translations/: en.json
lib/python-nta-gtfs/: pyproject.toml
lib/python-nta-gtfs/nta_gtfs/: __init__.py  static_gtfs.py
lib/python-nta-gtfs/tests/: test_gtfs_rt_client.py  test_static_gtfs_client.py
prototype/logo-directions-94/: README.md  gallery.html
specs/: CONSTITUTION.md
specs/001-core-sensor/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_integration.py  test_sensor.py  test_static_gtfs.py
