[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-tfi-live"
version = "0.2.0"
description = "Home Assistant custom integration for NTA/TFI real-time public transport departures"
requires-python = ">=3.12"
dependencies = [
    "python-nta-gtfs",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "aioresponses>=0.7.6",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "pydocstyle>=6.3.0",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Disable the pytest-homeassistant-custom-component plugin: it unconditionally
# imports homeassistant.runner which pulls in the POSIX-only fcntl module and
# crashes on Windows.  Tests use only unittest.mock.
addopts = "-p no:homeassistant --cov=custom_components/ha_tfi_live --cov-fail-under=95"

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = false

[tool.uv.sources]
python-nta-gtfs = { git = "https://github.com/nocalla/python-nta-gtfs.git" }
