[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-nta-gtfs"
version = "0.1.0"
description = "Async Python client for NTA GTFS real-time feeds"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["nta_gtfs"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
